# json_project_cli

./: README.md
json_project_cli/: pyproject.toml
json_project_cli/src/json_project_cli/: builder.py  cli.py
