[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "json-project-cli"
version = "0.1.0"
description = "CLI para criar estrutura de pastas/arquivos a partir de um JSON"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
create-json-project = "json_project_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
